--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "fibonacci": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "string": "c",
+        "iosfwd": "c"
     }
 }
